test/ill-formed/0033_nonstatic_array_param.c
void f (int a[restrict const 5]) {}
